<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Manifest configuration. -->
    <skip />
    <!-- Do not translate. android:sharedUserId of this application. -->
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <!-- Do not translate. android:process of this application. -->
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>
    
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="app_name">STS</string>
    <string name="btn_test">start</string>
    <string name="btn_test1">Reset</string>
   
	
    <string name="dialog_title">Information</string>
    <string name="dialog_message">text</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>    
	<string name="maxtime">How long to set STS after boot up (minutes):</string>
    <string name="testtime">Interval time of error requests(minute,min 1):</string>
    <string name="save">save</string>
    <string name="clear">force clear result</string>
    <string name="select_send_type_title">when finish sts test,must uncheck the Switch</string>
    <string name="select_send_type">Select send type:</string>
    <string name="switch_send_type">Switch</string>
    <string name="day_set_text">if failed 3 times the first day ,the interval sending time of next day (minutes)</string>
	<string name="version"></string>
	<string name="dialog_title_promp">Registration</string>
	<string name="dialog_message_promp">Press Continue to register your phone with us for warranty services, updates and more.\n *Standard SMS charges applicable.</string>
  	<string name="dialog_continue">Continue</string>
  	<string name="notify">Do you need pop up </string>
  	<string name="dialog_pop_title">Warning</string>
  	<string name="dialog_pop_contact">Press Yes to register your handset to Wiko.</string>
  	<string name="dialog_ok">OK</string>
  	<string name="wiko_sts_title">WIKO:</string>
 	<string name="wiko_sts_text1">Congratulations for buying a WIKO phone!</string>
    <string name="wiko_sts_text2">WIKO is committed to ensuring that you receive personalised, real-time technical assistance for your phone.</string>	
  	<string name="wiko_sts_text3">Registering your device means that we can keep you informed of available updates and hardware improvements.*</string>
 	<string name="wiko_sts_text4">* By confirming the registration of your phone with WIKO, you acknowledge that you have read and accepted the agreement on data usage included in the user guide supplied with your phone or available on our website wikomobile.com.</string>
	<string name="sts_invalid_value">Invalid input.</string>
    <string name="qmobile_sts_text">Thank you for choosing QMobile, please press OK to get registered with us for better services, warranty support and product updates. (Standard SMS charges will be applied)</string>
    <string name="qmobile_server_number">Set server number: </string>
</resources>
